questions-with-classifier-ega-war/src/main/webapp/dev/sass/style.scss
/* ... */
.menuIconContainer.active {
    background-color: $menu-color;
}

menu-overlay {
    #menuOverlay {
        position: fixed;
        left: 0;
        top: 0;
        width: 100%;
        height: 100%;
        background: rgba(0, 180, 160, 0.5);
        z-index: 2;
    }
    #menu {
        position: absolute;
        top: 3em;
        bottom: 3em;
        left: 5em;
        right: 5em;
        margin: 0 auto;
        background-color: #FFFFFF;
        padding: 3em;        
        .header {
            display: block;
            width: 100%;
            color: $header-color;
            padding-bottom: .5em;
            border-bottom: 2px solid $header-color;
            h2 {
                float: left;
                margin: 0px;
            }
        }
        span.close {
            cursor: pointer;
            font-size: 1.2em;
            float: right;
        }
        span.close:after {
            content:"X";
        }
        .header:after {
            display: block;
            content:" ";
            clear: both;
        }
        #menuContent {
            width: 100%;
            /* Calculate its height, taking into account the parent padding (3.0em) and its padding-top (.7em) to get 2.3em */
            height: -moz-calc(100% - 2.3em); /* Firefox */
            height: -webkit-calc(100% - 2.3em); /* Safari */
            height: calc(100% - 2.3em); /* IE9+, Chrome, and future browsers */
            padding-top: .7em;
            color: $dark-grey-text;
            font-size: 150%;
            overflow-x: hidden;
            overflow-y: auto;
            overflow-wrap: break-word;
        }
    }
}

.menu-label {
    display: none;
}

menu-list {
    pointer-events: auto;
    display: none;
    position: absolute;
    top: 50px;
    right: 0px;
    width: 300px;
    z-index: 1;
    background-color: $menu-color;
    
    ul {
        color: $menu-text-color;
        padding: 0px; 
        margin: .5em 0 0 0;
        list-style-type: none;
        li {
        	height: 50px;
            padding-top: 2em;
            padding-left: 2em;
            list-style-type: none;
            border-bottom: 1px solid $border-color-menu;
        }
        li:hover {
            cursor: pointer;
            background-color: $menu-item-hover-color;
            color: $menu-text-hover-color;
        }
        li:last-child { 
            border-bottom: none; 
        }
        li h3 {
        	float: left;
            margin: 0px;
            font-size: 1.25em;
            font-weight: normal;
        }
        .menu-option-home {
            display: block;
        }
    }
    .menu-content {
        display: none;
    }
}

.menu-list.active {
    display: block;
}

.feedbackThankYou {
    padding: 0 .5em;
}

.statusBar {
    @include displayFlex;
    @include justify-content(flex-start);
    @include align-items(center);
    
    color:            $dark-grey-text;
    background-color: $body-color;
    position:         relative;
    
    padding-top:    .5em;
    padding-bottom: .5em;
    padding-left:     1em;
    padding-right:  .5em;
    
    margin: 0 0.5em;
    
    border-style: solid;
    border-width: 2px;
    border-color: $light-grey-border-color;
    
    span {
        font-size: 1em;
        color: $green-text-color;
    }
    
    .thanksImage {
        display: inline-block;
        height: 40px;
        width: 40px;
        float: left;
    }
}

.home-tab-container {
    display: block;
    width: 100%;
    border: none;
    overflow-y: auto;
    background-color: $body-color;
    padding-right: 0px;
    height: -moz-calc(100% - 80px); /* Firefox */
    height: -webkit-calc(100% - 80px); /* Safari */
    height: calc(100% - 80px); /* IE9+, Chrome, and future browsers */
}

.home-tab-container.blurred {
    .cssfilters & {
        @include blur(2);
    }
    .no-cssfilters & {
        opacity: 0.5;
    }
}
.questionHasBeenAsked {
    display: none;
}

.getting-started-mobile {
    color: $blue-text-color;
    padding: 1em .5em;
    margin: 0;
    font-size: 2em;
}

.getting-started-desktop {
    display: none;
    color: $blue-text-color;
    padding: 0;
    margin: 0;
    font-size: 2em;
}

.bottom {
    margin: 1.5em auto 0 auto;
    max-width: 700px;
}

.ask-question-container {
    @extend .bottom;
    position: relative;
}

.ask-question-button {
    width: 100%;
    height: 4em;
    background-color: $button-color;
    color: $button-font-color;
    border: none;
}

.yayIcon {
    height: 40px;
}

.ask-question-tag {
    @include displayFlex;
    @include align-items(flex-end);
    @include flex-direction(column);
    border: 0;
    height: 100%;
    width: 100%;
}

.ask-question-tag.blurred {
    .cssfilters & {
        @include blur(2);
    }
    .no-cssfilters & {
        opacity: 0.5;
    }
}

.ask-question-tag.initialViewing {
    height: auto;
}

.ask-question-inner-container {
    display: block;
    overflow-y: auto;
    overflow-x: hidden;
    height: -moz-calc(100% - 80px); /* Firefox */
    height: -webkit-calc(100% - 80px); /* Safari */
    height: calc(100% - 80px); /* IE9+, Chrome, and future browsers */
    max-width: 700px;
    width: 100%;
    margin: 0 auto;
}

.top-questions-tab {
    display: block;
    padding-left: 1em;
    background-color: $body-color;
}

.top-questions-title {
    color: $blue-text-color;
    padding: .5em;
    margin: .5em 0;
    font-size: 1.25em;
    font-weight: normal;
}

.refinement-title {
    background-color: $refinement-header;
    color: $answer-text;
    padding: .5em 1em;
    font-size: 1.3em;
    margin: 1em .5em 0 .5em;
}

.questionList {
    margin: 0 .5em;
    padding: 2em 0 0 0;
    list-style-type: none;
}

.question {
    display: table;
    height: 50px;
    margin-bottom: .5em;
    padding-right: .5em;
    border-style: solid;
    border-width: 1px;
    border-color: $grey-border-color transparent transparent;
}
/* ... */

